# xkillr

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac  flags.c  main.c
include/: clap.h  copying.h  flags.h
src/: build.rl  clap.h  dyn_array.h  main.c
